[gd_scene load_steps=14 format=3 uid="uid://bq7jj2aydbqug"]

[ext_resource type="Script" uid="uid://cms1wqfr4yeb5" path="res://splash_screen/splash_screen.gd" id="1_q7nii"]
[ext_resource type="Texture2D" uid="uid://bdba0wahju1ak" path="res://splash_screen/splash_title.png" id="2_ryhtq"]
[ext_resource type="FontFile" uid="uid://dttdyavpec18b" path="res://material_maker/fonts/vegur_regular.otf" id="3_m0b76"]
[ext_resource type="Texture2D" uid="uid://dfy67bw73b836" path="res://splash_screen/arrow.svg" id="5_o00vo"]
[ext_resource type="Shader" uid="uid://b3x7551t5ha0u" path="res://splash_screen/splash_screen_bottom.gdshader" id="5_xhfa4"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_jeaul"]
size = Vector2(760, 430)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_k4lwu"]
bg_color = Color(0.509804, 0.584314, 1, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_dfnby"]
shader = ExtResource("5_xhfa4")

[sub_resource type="AtlasTexture" id="AtlasTexture_c2kbv"]
atlas = ExtResource("5_o00vo")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rho5p"]
atlas = ExtResource("5_o00vo")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rcyda"]
atlas = ExtResource("5_o00vo")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_uxt7b"]
atlas = ExtResource("5_o00vo")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_587d8"]
atlas = ExtResource("5_o00vo")
region = Rect2(64, 32, 64, 32)

[node name="Container" type="MarginContainer"]
custom_minimum_size = Vector2(760, 430)
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_q7nii")

[node name="SplashScreen" type="TextureRect" parent="."]
clip_contents = true
custom_minimum_size = Vector2(760, 430)
layout_mode = 2
texture = SubResource("PlaceholderTexture2D_jeaul")
expand_mode = 1

[node name="TextureRect" type="TextureRect" parent="SplashScreen"]
layout_mode = 0
offset_top = 34.0
offset_right = 435.0
offset_bottom = 155.0
texture = ExtResource("2_ryhtq")

[node name="MM" type="Label" parent="SplashScreen/TextureRect"]
layout_mode = 0
offset_left = 25.0
offset_top = 21.0
offset_right = 352.0
offset_bottom = 90.0
theme_override_fonts/font = ExtResource("3_m0b76")
theme_override_font_sizes/font_size = 54
text = "Material Maker"
horizontal_alignment = 2

[node name="Version" type="Label" parent="SplashScreen/TextureRect/MM"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.618
anchor_right = 0.714
anchor_bottom = 0.816
offset_left = 94.5
offset_top = 21.358
offset_right = 95.002
offset_bottom = 30.696
theme_override_colors/font_color = Color(0.760784, 0.760784, 0.760784, 1)
theme_override_fonts/font = ExtResource("3_m0b76")
theme_override_font_sizes/font_size = 16
horizontal_alignment = 2

[node name="ProgressBar" type="ProgressBar" parent="SplashScreen/TextureRect"]
layout_mode = 0
offset_top = 128.0
offset_right = 431.0
offset_bottom = 134.0
theme_override_styles/fill = SubResource("StyleBoxFlat_k4lwu")
show_percentage = false

[node name="SecretButton" type="Control" parent="SplashScreen/TextureRect"]
layout_mode = 1
anchor_right = 0.026
anchor_bottom = 0.098
offset_left = 437.0
offset_top = 44.0
offset_right = 437.0
offset_bottom = 43.986

[node name="DarkenBottom" type="ColorRect" parent="SplashScreen"]
material = SubResource("ShaderMaterial_dfnby")
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 331.0
offset_bottom = 1.0

[node name="URL" type="Label" parent="SplashScreen"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 4.0
offset_top = 414.0
offset_right = 134.0
offset_bottom = 433.0
mouse_filter = 0
mouse_default_cursor_shape = 2
theme_override_font_sizes/font_size = 11
text = "www.materialmaker.org"

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 0
theme_override_constants/margin_right = 14
theme_override_constants/margin_bottom = 3

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
alignment = 2

[node name="Title" type="Label" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0.137255, 0.137255, 0.137255, 1)
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 18
text = "Title"

[node name="Control" type="Control" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2

[node name="Author" type="Label" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 2
theme_override_colors/font_color = Color(0.427451, 0.709804, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0.74902, 1)
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 18
text = "Author"

[node name="BackgroundSelect" type="Control" parent="."]
visible = false
layout_mode = 2
mouse_filter = 2

[node name="Previous" type="TextureButton" parent="BackgroundSelect"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
offset_left = 368.0
offset_top = 65.0
offset_right = 400.0
offset_bottom = 97.0
size_flags_horizontal = 0
size_flags_vertical = 0
texture_normal = SubResource("AtlasTexture_c2kbv")
ignore_texture_size = true
stretch_mode = 0
flip_h = true

[node name="Next" type="TextureButton" parent="BackgroundSelect"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
offset_left = 456.0
offset_top = 67.0
offset_right = 488.0
offset_bottom = 99.0
size_flags_horizontal = 8
size_flags_vertical = 0
texture_normal = SubResource("AtlasTexture_rho5p")
ignore_texture_size = true
stretch_mode = 0

[node name="RightEye" type="TextureRect" parent="BackgroundSelect"]
layout_mode = 0
offset_left = 410.0
offset_top = 86.0
offset_right = 450.0
offset_bottom = 126.0
scale = Vector2(0.185, 0.185)
mouse_filter = 2
texture = SubResource("AtlasTexture_rcyda")

[node name="LeftEye" type="TextureRect" parent="BackgroundSelect"]
layout_mode = 0
offset_left = 439.0
offset_top = 83.0
offset_right = 479.0
offset_bottom = 123.0
scale = Vector2(0.185, 0.185)
mouse_filter = 2
texture = SubResource("AtlasTexture_uxt7b")

[node name="Mouth" type="TextureRect" parent="BackgroundSelect"]
layout_mode = 0
offset_left = 421.0
offset_top = 99.0
offset_right = 485.0
offset_bottom = 139.0
scale = Vector2(0.255, 0.185)
mouse_filter = 2
texture = SubResource("AtlasTexture_587d8")

[connection signal="gui_input" from="SplashScreen/TextureRect/SecretButton" to="." method="_on_secret_button_gui_input"]
[connection signal="gui_input" from="SplashScreen/URL" to="." method="_on_url_gui_input"]
[connection signal="pressed" from="BackgroundSelect/Previous" to="." method="_on_previous_pressed"]
[connection signal="pressed" from="BackgroundSelect/Next" to="." method="_on_next_pressed"]
